# Player

./: README.md
app/: build.gradle  local.properties
app/src/androidTest/java/com/c/player/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AllDecoder.cpp  AudioDecoder.cpp  CMakeLists.txt  Displayer.cpp  EglCore.cpp  GLImageFilter.cpp  GLImageVignetteFilter.cpp  JavaCallBack.cpp  Matrix.cpp  Media.cpp  MediaClock.cpp  MediaDocoder.cpp  MediaSyner.cpp  OpenglHelp.cpp  OpenslHelp.cpp  RenderManager.cpp  Sonicwrapper.cpp  Texture.cpp  VideoDecoder.cpp  YUVImageFilter.cpp  YUVSpliter.cpp  player.cpp
app/src/main/cpp/include/: AllDecoder.h  AudioDecoder.h  AudioSpec.h  Displayer.h  EglCore.h  GLImageFilter.h  GLImageVignetteFilter.h  JavaCallBack.h  Matrix.h  Media.h  MediaCallBack.h  MediaClock.h  MediaDecoder.h  MediaSyner.h  MediaSynerCallBack.h  OpenglHelp.h  OpenslHelp.h  RenderManager.h  Sonicwrapper.h  Texture.h  Tool.h  VideoDecoder.h  YUVImageFilter.h  YUVSpliter.h  stb_image.h
app/src/main/java/com/c/player/: MainActivity.kt  MySurface.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/c/player/: ExampleUnitTest.kt
ffmpeglib/: build.gradle
ffmpeglib/src/androidTest/java/com/c/ffmpeglib/: ExampleInstrumentedTest.java
ffmpeglib/src/main/: AndroidManifest.xml
ffmpeglib/src/main/cpp/ffmpeg/: androidlog.h
ffmpeglib/src/test/java/com/c/ffmpeglib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
soundtouchlib/: build.gradle
soundtouchlib/src/: CMakeLists.txt
soundtouchlib/src/androidTest/java/com/c/soundtouchlib/: ExampleInstrumentedTest.kt
soundtouchlib/src/main/: AndroidManifest.xml
soundtouchlib/src/main/res/values/: strings.xml
soundtouchlib/src/test/java/com/c/soundtouchlib/: ExampleUnitTest.kt
